fix: juara 3 bracket
